evaluator/sources/703336524.error
/eval-folder/703336524.cpp: In function 'int main()':
/eval-folder/703336524.cpp:6:1: error: expected ';' before '}' token
 }
 ^
